--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@layer base {
+/* @layer base {
   input {
     @apply appearance-none block w-full py-3 px-4 text-sm bg-gray-50 text-gray-700 border border-gray-100 rounded  leading-tight focus:outline-none focus:bg-white focus:border-gray-200;
   }
@@ -17,5 +13,78 @@
   }
   .card {
     @apply bg-gray-100 shadow-md rounded-lg p-4 m-4 flex flex-col gap-2;
+  }
+} */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  label {
+    @apply block text-sm font-medium sm:mt-px sm:pt-2 text-gray-800;
+  }
+  h1 {
+    @apply text-2xl font-bold tracking-wide text-slate-800;
+  }
+  h2 {
+    @apply text-2xl text-gray-900;
+  }
+}
+
+@layer components {
+  .btn-light {
+    @apply inline-block bg-slate-100 py-2 px-4 border border-transparent rounded-md text-base font-medium text-slate-600 hover:bg-slate-200;
+  }
+  .btn-outline {
+    @apply inline-block border border-slate-300 py-2 px-4 rounded-md text-base font-medium text-slate-800 hover:bg-slate-50;
+  }
+  .btn-outline-dark {
+    @apply border-slate-700  text-slate-200 hover:bg-slate-800;
+  }
+  .btn-dark {
+    @apply inline-block bg-slate-700 py-2 px-4 border border-transparent rounded-md text-base font-medium text-slate-100 hover:bg-gray-800;
+  }
+  .btn-green {
+    @apply py-2 px-4 border border-transparent rounded-md text-base font-medium text-green-700;
+  }
+  .btn-social-login {
+    @apply cursor-pointer w-full inline-flex justify-center py-2 px-4 border border-slate-300  rounded-md shadow-sm bg-white  text-sm font-medium text-slate-500  hover:bg-slate-50;
+  }
+
+  .input-field {
+    @apply block 
+      w-full 
+      mb-3 
+      p-4
+      sm:text-sm 
+      shadow-sm 
+      rounded-md 
+      border 
+      border-slate-300 
+      placeholder-slate-500 
+      text-slate-900 
+      focus:ring-indigo-500 
+      focus:border-indigo-500 
+      invalid:border-red-300 
+      invalid:text-red-900 
+      invalid:placeholder-red-300  
+      invalid:focus:ring-red-500 
+      invalid:focus:border-red-500;
+  }
+  .input-field-dark {
+    @apply bg-gray-800 border-gray-900 placeholder-gray-400 text-white 
+      invalid:border-red-500 
+      invalid:text-gray-100 
+      invalid:placeholder-slate-500 
+      invalid:focus:ring-red-500 
+      invalid:focus:border-red-500;
+  }
+
+  .error-message {
+    @apply text-sm text-red-600;
+  }
+  .success-message {
+    @apply text-sm text-green-700;
   }
 }
