denormalized user data on signup?

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@
     @apply text-2xl font-normal tracking-wide text-slate-800;
   }
   h2 {
-    @apply text-2xl text-gray-900;
+    @apply text-xl text-gray-800;
   }
 }
 
@@ -21,12 +21,7 @@
   .btn-outline {
     @apply inline-block border border-slate-200 py-2 px-4 rounded-md text-base font-medium text-slate-800 hover:bg-slate-50;
   }
-  .btn-outline-dark {
-    @apply border-slate-700  text-slate-200 hover:bg-slate-800;
-  }
-  .btn-dark {
-    @apply cursor-pointer inline-block bg-slate-700 py-3 px-6 border border-transparent rounded-md text-base font-semibold tracking-wide text-white hover:bg-blue-800;
-  }
+
   .btn-blue {
     @apply cursor-pointer inline-block bg-blue-100 py-3 px-4 border border-transparent rounded-md text-base font-semibold tracking-wide text-blue-700 hover:bg-blue-50;
   }
@@ -37,7 +32,6 @@
   .input-field {
     @apply block 
       w-full 
-
       p-4
       sm:text-sm 
       rounded-md 
